<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ProfileView"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#2a9df4"
        android:padding="20dp">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:background="@drawable/black_pic_border"
            android:src="@drawable/ic_profile_image"
            >
        </ImageView>

        <TextView
            android:id="@+id/fullNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/profile_image"
            android:text="Name"
            android:textColor="#000"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="DELETE ACCOUNT"
            android:layout_alignParentTop="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-75dp"
        android:padding="10dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            app:cardBackgroundColor="#187bcd"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:layout_centerHorizontal="true"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_match">

                </ImageView>

                <TextView
                    android:id="@+id/match_label"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Friends"
                    android:textSize="20sp">

                </TextView>

                <TextView
                    android:id="@+id/number_matches"
                    android:layout_below="@+id/match_label"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Number goes here"
                    android:textSize="20sp">

                </TextView>

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/first_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="First Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/first_name_input_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/last_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Last Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/age_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Age">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--gender-->
            <Spinner
                android:id="@+id/genderSpinner1_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Location">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--gender preference-->

            <TextView
                android:id="@+id/preferenceText_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/preference_caption" />

            <Spinner
                android:id="@+id/genderSpinner2_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/min_age_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Minimum Age">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/max_age_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Maximum Age">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/proximity_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Proximity">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--interests-->
            <TextView
                android:id="@+id/aboutText_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_caption" />

            <Spinner
                android:id="@+id/interest1Spinner_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"/>

            <Spinner
                android:id="@+id/interest2Spinner_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"/>

            <Spinner
                android:id="@+id/interest3Spinner_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bio_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="150"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="Biography"
                    android:inputType="textMultiLine"
                    android:lines="3"
                    android:maxLines="6"
                    android:minLines="2"
                    android:scrollbars="vertical" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/update_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="#2a9df4"
                android:text="UPDATE" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>